# ccx-rs

./: .ccx-teams.json  .ccx-todos.json  .gitignore  Cargo.toml  README.md  SPEC.md  install.ps1  install.sh  message-to-team-lead.txt  research-api-core.md  research-parity-summary.md  research-tools.md  research-tui-config-perms.md
.github/workflows/: ci.yml  release.yml
crates/ccx-api/: Cargo.toml
crates/ccx-api/src/: client.rs  error.rs  lib.rs  openai_client.rs  types.rs
crates/ccx-auth/: Cargo.toml
crates/ccx-auth/src/: lib.rs  oauth.rs
crates/ccx-cli/: Cargo.toml
crates/ccx-cli/src/: commands.rs  completer.rs  main.rs  mcp_bridge.rs  sessions.rs
crates/ccx-compact/: Cargo.toml
crates/ccx-compact/src/: auto.rs  lib.rs  micro.rs  tokens.rs
crates/ccx-config/: Cargo.toml
crates/ccx-config/src/: lib.rs  settings.rs
crates/ccx-core/: Cargo.toml
crates/ccx-core/src/: agent.rs  agent_loop.rs  context.rs  cost.rs  hooks.rs  lib.rs  tool.rs
crates/ccx-mcp/: Cargo.toml
crates/ccx-mcp/src/: client.rs  lib.rs  transport.rs  types.rs
crates/ccx-memory/: Cargo.toml
crates/ccx-memory/src/: lib.rs  store.rs  types.rs
crates/ccx-permission/: Cargo.toml
crates/ccx-permission/src/: cascade.rs  classifier.rs  lib.rs  modes.rs  rules.rs
crates/ccx-prompt/: Cargo.toml
crates/ccx-prompt/src/: claudemd.rs  lib.rs  system.rs
crates/ccx-sandbox/: Cargo.toml
crates/ccx-sandbox/src/: lib.rs  linux.rs  macos.rs  none.rs
crates/ccx-skill/: Cargo.toml
crates/ccx-skill/src/: builtins.rs  executor.rs  lib.rs  loader.rs
crates/ccx-tools/: Cargo.toml
crates/ccx-tools/src/: agent_tool.rs  bash.rs  enter_plan_mode.rs  exit_plan_mode.rs  file_edit.rs  file_read.rs  file_write.rs  glob_tool.rs  grep.rs  lib.rs  meta_helpers.rs  notebook_edit.rs  path_validation.rs  send_message.rs  task_create.rs  task_list.rs  task_update.rs  team_create.rs  team_delete.rs  todo_write.rs  web_fetch.rs  web_search.rs
crates/ccx-tui/: Cargo.toml
crates/ccx-tui/src/: app.rs  chat.rs  inline.rs  input.rs  lib.rs  style.rs  welcome.rs
