[workspace]
members = [
    "crates/ccx-cli",
    "crates/ccx-api",
    "crates/ccx-core",
    "crates/ccx-auth",
    "crates/ccx-tools",
    "crates/ccx-prompt",
    "crates/ccx-permission",
    "crates/ccx-config",
    "crates/ccx-memory",
    "crates/ccx-compact",
    "crates/ccx-mcp",
    "crates/ccx-skill",
    "crates/ccx-sandbox",
    "crates/ccx-tui",
]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2024"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
bytes = "1"
async-trait = "0.1"
glob = "0.3"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
