[package]
name = "ccx-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-provider API client with streaming support for ccx"

[dependencies]
ccx-auth = { path = "../ccx-auth" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
