[package]
name = "ccx-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "API key and OAuth resolution for ccx"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
open = "5"
urlencoding = "2"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
