[package]
name = "ccx-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI entry point for ccx"

[[bin]]
name = "ccx"
path = "src/main.rs"

[dependencies]
ccx-api = { path = "../ccx-api" }
ccx-auth = { path = "../ccx-auth" }
ccx-core = { path = "../ccx-core" }
ccx-tools = { path = "../ccx-tools" }
ccx-prompt = { path = "../ccx-prompt" }
ccx-permission = { path = "../ccx-permission" }
ccx-config = { path = "../ccx-config" }
ccx-memory = { path = "../ccx-memory" }
ccx-compact = { path = "../ccx-compact" }
ccx-mcp = { path = "../ccx-mcp" }
ccx-skill = { path = "../ccx-skill" }
ccx-sandbox = { path = "../ccx-sandbox" }
ccx-tui = { path = "../ccx-tui" }
async-trait = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
rustyline = { version = "14", features = ["derive"] }
dirs = "5"
