[package]
name = "ccx-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core agent loop and tool system"

[dependencies]
ccx-api = { path = "../ccx-api" }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
glob = { workspace = true }
