[package]
name = "ccx-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) client for ccx"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
