[package]
name = "ccx-permission"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Permission rules and modes for ccx"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
glob = { workspace = true }
