[package]
name = "ccx-prompt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "System prompt construction and CLAUDE.md parsing"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
