[package]
name = "ccx-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Built-in tools for ccx"

[dependencies]
ccx-core = { path = "../ccx-core" }
ccx-api = { path = "../ccx-api" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
glob = { workspace = true }
reqwest = { workspace = true }
